<resources>
    <string name="app_name">Fit Food</string>
    <string name="main">Главная</string>
    <string name="shopping_list">Список покупок</string>
    <string name="profile">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LogIn_or_SignUp">Выполните вход или зарегестрируйтесь</string>
    <string name="sign_up">Зарегестрироваться</string>
    <string name="log_in">Войти</string>
    <string name="input_log_pass">Введите логин и пароль</string>
    <string name="user_name">Логин</string>
    <string name="password">Пароль</string>
    <string name="think_log_pass">Придумайте лоигн и пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="hello">Здравствуйте!</string>
    <string name="hellofragment_content">Для более комфортного использования приложения необходимо пройти анкетирование. Ваши ответы на вопросы помогут узнать вас получше, подобрать правильный план, учитывающий Ваши предпочтения и противопоказания</string>
    <string name="start">Начать</string>
    <string name="what_u_name">Как Вас зовут?</string>
    <string name="print_name">Введите имя</string>
    <string name="further">Далее</string>
    <string name="what_u_height">Какой у Вас рост (в см)?</string>
    <string name="print_height">Введите рост</string>
    <string name="what_u_weight">Какой у Вас вес (в кг)?</string>
    <string name="print_weight">Введите вес</string>
    <string name="what_u_goal">Какую цель вы преследуете в отношении своего питания?</string>
    <string name="weight_loss">Похудение</string>
    <string name="weight_gain">Набор массы</string>
    <string name="drying">Сушка</string>
    <string name="maintaining_mass">Поддержание массы</string>
    <string name="what_u_activity_lvl">Опишите свой уровень активности:</string>
    <string name="sedentary">Сидячий образ жизни</string>
    <string name="moderately_active">Умеренно активный (умеренные физические нагрузки или ходьба 10 000 шагов в день)</string>
    <string name="active">Активный (интенсивные тренировки 3-4 раза в неделю)</string>
    <string name="very_active">Очень активный (ежедневные интенсивные тренировки или физическая работа)</string>
    <string name="training_frequency">Как часто Вы тренируетесь?</string>
    <string name="no_training">Не тренируюсь</string>
    <string name="one_two_training">1-2 раза в неделю</string>
    <string name="three_four_training">3-4 раза в неделю</string>
    <string name="more_four_training">Более 4-х раз в неделю</string>
    <string name="what_u_contraindications">Укажите продукты, добавки, ингредиенты и т.д., которые Вы не желаете видеть (или хотите сократить) в своём рационе (противопоказания, не нравятся по вкусу)</string>
    <string name="what_u_preferences">Укажите продукты, ингредиенты и т.д., которые предпочитаете (нравятся по вкусу, рекомендованы к употреблению), разделяя их ТОЛЬКО запятой и пробелом</string>
    <string name="what_u_food_style">Какой из следующих стилей питания соответствует вашим предпочтениям?</string>
    <string name="vegan">Вегетерианство</string>
    <string name="more_meal">Умеренное потребление мяса с ограничением гарниров</string>
    <string name="less_meal">Умеренное потребление гарниров с ограничением мяса</string>
    <string name="plan_preface">Теперь мы узнали Вас получше и составили подходящие Вам планы питания. Все они собраны исходя из Ваших целей, пожеланий и противопоказаний.</string>
    <string name="thanks_to">Спасибо, </string>
    <string name="average_ccal">Средние показатели КБЖУ - \n</string>
    <string name="good_afternoon">Добрый день!</string>
    <string name="dish_eaten">Блюд съедено</string>
    <string name="goal_completion">Выполнение цели</string>
    <string name="show_plan">Посмотреть план</string>
    <string name="update_weight">Обновить вес</string>
    <string name="change_plan">Сменить план</string>
    <string name="complited">Выполнено</string>
    <string name="complite">Записать приём пищи</string>
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="dinner">Ужин</string>
    <string name="snack">Перекус</string>
    <string name="no_photo">Фото отсутствует</string>
    <string name="ccal_eaten">Ккал съедено</string>
    <string name="show_shop_list_for">Отобразить список покупок на</string>
    <string name="add_own_product">Добавить свой продукт</string>
    <string name="scan_barcode">Отсканировать штрих-код</string>
    <string name="good_afternoon_name">Добрый день,</string>
    <string name="name">Имя</string>
    <string name="weight">Вес</string>
    <string name="goal_weight">Целевой вес</string>
    <string name="plan">План питания</string>
    <string name="calorie_statistics">Статистика потребляемых калорий</string>
    <string name="weight_statistics">Статистика изменения веса</string>
    <string name="count">Количество</string>
    <string name="product_name">Название</string>
    <string name="what_u_goal_weight">Какой у вас целевой вес (в кг)?</string>
    <string name="suagar">Сахар</string>
    <string name="carbohydrate">Углеводы</string>
    <string name="Fats">Жиры</string>
    <string name="milk">Молочная продукция</string>
    <string name="pig">Свинина</string>
    <string name="meal">Мясо</string>
    <string name="choose">Выбрать</string>
    <string name="average_calories">Средний каллораж: </string>
    <string name="watch_recipe">Посмотреть рецепт</string>
    <string name="carbohydrates">Углеводы:</string>
    <string name="fats">Жиры:</string>
    <string name="proteins">Белки:</string>
    <string name="calories">Калории:</string>
    <string name="recipe">Способ приготовления:</string>
    <string name="watch_plan">Изучить план</string>
    <string name="mail_example">example@mail.ru</string>
    <string name="do_registration">Регестрируем пользователя...</string>
    <string name="do_login">Выполянем вход...</string>

    <string-array name="shopping_list_variants">
        <item>сегодня</item>
        <item>завтра</item>
        <item>неделя</item>
    </string-array>


</resources>