<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Survey.ContraindicationsQuestionFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/what_u_contraindications"
        android:fontFamily="@font/dexaround_regular"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"/>
    <CheckBox
        android:id="@+id/sugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/suagar"
        android:textSize="20sp"
        android:fontFamily="@font/dexaround_regular"/>
    <CheckBox
        android:id="@+id/carbohydrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/carbohydrate"
        android:textSize="20sp"
        android:fontFamily="@font/dexaround_regular"/>
    <CheckBox
        android:id="@+id/fats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/Fats"
        android:textSize="20sp"
        android:fontFamily="@font/dexaround_regular"/>
    <CheckBox
        android:id="@+id/milk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/milk"
        android:textSize="20sp"
        android:fontFamily="@font/dexaround_regular"/>
    <CheckBox
        android:id="@+id/pig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/pig"
        android:textSize="20sp"
        android:fontFamily="@font/dexaround_regular"/>
    <CheckBox
        android:id="@+id/meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/meal"
        android:textSize="20sp"
        android:fontFamily="@font/dexaround_regular"/>
    <Button
        android:id="@+id/next_btn"
        android:textAllCaps="false"
        android:background="@drawable/roundstyle"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="30dp"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/further"
        android:fontFamily="@font/dexaround_semibold"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"/>

</LinearLayout>