<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Registration.SignUp.SignUpFragment"
    android:orientation="vertical">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/think_log_pass"
        android:fontFamily="@font/dexaround_regular"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/mail_example"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/dexaround_regular"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_border_black"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/first_password"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:fontFamily="@font/dexaround_regular"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_border_black"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/second_password"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:fontFamily="@font/dexaround_regular"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_border_black"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/log_in_btn"
        android:enabled="false"
        android:textAllCaps="false"
        android:background="@drawable/roundstyle"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="30dp"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        android:fontFamily="@font/dexaround_semibold"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"/>
    <TextView
        android:id="@+id/progress_bar_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_registration"
        android:fontFamily="@font/dexaround_regular"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>


</LinearLayout>