<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecipeCardFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Наименование плана"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:fontFamily="@font/dexaround_regular"
        android:textAlignment="center"
        android:layout_marginTop="15dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/black" />
    <ImageView
        android:id="@+id/recipe_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/black" />
    <TextView
        android:id="@+id/recipe_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Наименование плана"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/dexaround_regular"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/dexaround_regular"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/recipe_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/dexaround_regular"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proteins"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/dexaround_regular"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/recipe_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/dexaround_regular"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fats"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/dexaround_regular"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/recipe_fats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/dexaround_regular"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbohydrates"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/dexaround_regular"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/recipe_carbohydrates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/dexaround_regular"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:fontFamily="@font/dexaround_regular"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/dexaround_regular"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/eaten_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/complite"
        android:background="@drawable/roundstyle"
        android:fontFamily="@font/dexaround_semibold"/>
</LinearLayout>
</ScrollView>