<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/black" />
    <LinearLayout
        android:layout_marginEnd="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/plan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dexaround_regular"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/average_calories"
                android:layout_width="wrap_content"
                android:text="@string/average_calories"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dexaround_regular"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>
            <TextView
                android:id="@+id/plan_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dexaround_regular"
                android:textColor="@color/black_2"
                android:textSize="16sp"
                android:layout_marginStart="10dp"/>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <Button
                   android:id="@+id/choose_btn"
                   android:layout_marginTop="10dp"
                   android:layout_width="125dp"
                   android:layout_height="27dp"
                   android:layout_weight="1"
                   android:background="@drawable/roundstyle"
                   android:foreground="?android:attr/selectableItemBackground"
                   android:padding="0dp"
                   android:layout_marginLeft="3dp"
                   android:layout_marginRight="3dp"
                   android:textAlignment="center"
                   android:text="@string/choose"
                   android:fontFamily="@font/dexaround_semibold"
                   android:textAllCaps="false"
                   android:textSize="12sp" />
               <Button
                   android:id="@+id/watch_plan_btn"
                   android:layout_marginTop="10dp"
                   android:layout_width="125dp"
                   android:layout_height="27dp"
                   android:layout_weight="1"
                   android:background="@drawable/roundstyle"
                   android:foreground="?android:attr/selectableItemBackground"
                   android:padding="0dp"
                   android:layout_marginLeft="3dp"
                   android:layout_marginRight="3dp"
                   android:textAlignment="center"
                   android:text="@string/watch_plan"
                   android:fontFamily="@font/dexaround_semibold"
                   android:textAllCaps="false"
                   android:textSize="12sp" />
           </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/plan_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/no_photo" />


</LinearLayout>

</LinearLayout>