<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ShoppingListFragment"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shopping_list"
        android:fontFamily="@font/dexaround_regular"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="на сегодня"
        android:fontFamily="@font/dexaround_regular"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:layout_marginStart="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_shop_list_for"
            android:fontFamily="@font/dexaround_regular"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dexaround_regular"
            android:entries="@array/shopping_list_variants" />
    </LinearLayout>
    <TextView
        android:id="@+id/bought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dexaround_regular"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/add_product"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_weight="1"
            android:background="@drawable/roundstyle"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:textAlignment="center"
            android:text="@string/add_own_product"
            android:fontFamily="@font/dexaround_semibold"
            android:textAllCaps="false"
            android:textSize="12sp" />
<!--        <Button
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:layout_weight="1"
            android:background="@drawable/roundstyle"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="0dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:textAlignment="center"
            android:text="@string/scan_barcode"
            android:fontFamily="@font/dexaround_semibold"
            android:textAllCaps="false"
            android:textSize="12sp" /> -->
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shopping_list"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>